--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,7 +39,8 @@
   './components/lists',
   './components/subway',
   './components/nav_book',
-  './components/buttons_links'
+  './components/buttons_links',
+  './components/containers'
   ;
 
 // #################################
