--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -21854,6 +21854,24 @@ a > .ck-content code {
   transition: all 0.15s ease-in-out;
   text-decoration: underline;
 }
+.ck-content .well {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: var(--bs-gray-200);
+  border: 1px solid var(--bs-gray-400);
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+.ck-content .well-sm {
+  padding: 9px;
+  border-radius: 3px;
+}
+.ck-content .well-lg {
+  padding: 24px;
+  border-radius: 6px;
+}
 .ck-content html.bcbb-theme .navbar-brand a.site-title {
   color: #fff;
   text-decoration: none;
