--- a/css/style.css
+++ b/css/style.css
@@ -25362,6 +25362,27 @@ ul.bb-nav-book {
   text-decoration: underline;
 }
 
+.well {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: var(--bs-gray-200);
+  border: 1px solid var(--bs-gray-400);
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
+.well-sm {
+  padding: 9px;
+  border-radius: 3px;
+}
+
+.well-lg {
+  padding: 24px;
+  border-radius: 6px;
+}
+
 html.bcbb-theme .navbar-brand a.site-title {
   color: #fff;
   text-decoration: none;
