--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -21399,23 +21399,6 @@ a > .ck-content code {
 .ck-content code {
   overflow-y: auto;
 }
-.ck-content :root {
-  --bs-white: strip-hash(#fff);
-}
-.ck-content .bcbb-theme .btn-primary {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #38598a;
-  --bs-btn-border-color: #2d476e;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #32507c;
-  --bs-btn-focus-shadow-rgb: 38, 89, 206;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #00309e;
-  --bs-btn-active-border-color: #2d476e;
-  --bs-btn-active-shadow: inset 0 px-em(3px) px-em(5px) rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-bg: #111b29;
-  --bs-btn-disabled-border-color: #080d15;
-}
 .ck-content .bcbb-theme input[type=checkbox] {
   border-color: #959595;
 }
@@ -21871,18 +21854,65 @@ a > .ck-content code {
     margin-top: 3.5em;
   }
 }
-.ck-content .bb-link-light {
+.ck-content .bcbb-theme .bb-link-light {
   color: #fff;
   background-color: transparent;
   border: 0;
   font-size: 0.87em;
   text-decoration: none;
 }
-.ck-content .bb-link-light:hover, .ck-content .bb-link-light:focus {
+.ck-content .bcbb-theme .bb-link-light:hover, .ck-content .bcbb-theme .bb-link-light:focus {
   opacity: 80%;
   -webkit-transition: all 0.15s ease-in-out;
   transition: all 0.15s ease-in-out;
   text-decoration: underline;
+}
+.ck-content .bcbb-theme .button {
+  --bs-btn-color: #313132;
+  --bs-btn-bg: #f2f2f2;
+  --bs-btn-border-color: #dadada;
+  --bs-btn-hover-color: #313132;
+  --bs-btn-hover-bg: #e6e6e6;
+  --bs-btn-hover-border-color: #dadada;
+  --bs-btn-focus-shadow-rgb: 38, 89, 206;
+  --bs-btn-active-color: #313132;
+  --bs-btn-active-bg: #e6e6e6;
+  --bs-btn-active-border-color: #dadada;
+  --bs-btn-active-shadow: inset 0 px-em(3px) px-em(5px) rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-bg: #c2c2c2;
+  --bs-btn-disabled-border-color: #9d9d9d;
+}
+.ck-content .bcbb-theme .button--primary,
+.ck-content .bcbb-theme .btn-primary {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #38598a;
+  --bs-btn-border-color: #2d476e;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #273e61;
+  --bs-btn-hover-border-color: #223553;
+  --bs-btn-focus-shadow-rgb: 38, 89, 206;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #273e61;
+  --bs-btn-active-border-color: #223553;
+  --bs-btn-active-shadow: inset 0 px-em(3px) px-em(5px) rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-bg: #111b29;
+  --bs-btn-disabled-border-color: #080d15;
+}
+.ck-content .bcbb-theme .button--danger,
+.ck-content .bcbb-theme .btn-danger {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #a12622;
+  --bs-btn-border-color: #811e1b;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #711b18;
+  --bs-btn-hover-border-color: #611714;
+  --bs-btn-focus-shadow-rgb: 38, 89, 206;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #711b18;
+  --bs-btn-active-border-color: #611714;
+  --bs-btn-active-shadow: inset 0 px-em(3px) px-em(5px) rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-bg: #300b0a;
+  --bs-btn-disabled-border-color: #180605;
 }
 .ck-content .well {
   min-height: 20px;
