--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -6,7 +6,7 @@
   }
 }
 
-@mixin responsive-down($size: xs-max) {
+@mixin responsive-down($size: $xs-max) {
   @media only screen and (max-width: $size) {
     @content;
   }
@@ -24,7 +24,37 @@
   color: $color;
 }
 
+//use for buttons with a dark bacjground and light text
+@mixin button-color-dark($bgColor: $colorAlert-info,$labelColor: $colorWhite) {
+  --bs-btn-color: #{$labelColor};
+  --bs-btn-bg: #{$bgColor};
+  --bs-btn-border-color: #{mix($colorBlack, $bgColor, 20%)};
+  --bs-btn-hover-color: #{$labelColor};
+  --bs-btn-hover-bg: #{mix($colorBlack, $bgColor, 30%)};
+  --bs-btn-hover-border-color: #{mix($colorBlack, $bgColor, 40%)};
+  --bs-btn-focus-shadow-rgb: 38, 89, 206;
+  --bs-btn-active-color: #{$labelColor};
+  --bs-btn-active-bg: #{mix($colorBlack, $bgColor, 30%)};
+  --bs-btn-active-border-color: #{mix($colorBlack, $bgColor, 40%)};
+  --bs-btn-active-shadow: inset 0 px-em(3px) px-em(5px) rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-bg: #{mix($colorBlack, $bgColor, 70%)};
+  --bs-btn-disabled-border-color: #{mix($colorBlack, $bgColor, 85%)};
+}
 
-// convert hex to rgb
-// this requires a function to work
-//@mixin rgb ($color) {hex-rgb($color)}
+//use for buttons with a light background and light text
+@mixin button-color-light($bgColor: $colorAlert-info,$labelColor: $colorWhite) {
+  --bs-btn-color: #{$labelColor};
+  --bs-btn-bg: #{$bgColor};
+  --bs-btn-border-color: #{mix($colorBlack, $bgColor, 10%)};
+  --bs-btn-hover-color: #{$labelColor};
+  --bs-btn-hover-bg: #{mix($colorBlack, $bgColor, 5%)};
+  --bs-btn-hover-border-color: #{mix($colorBlack, $bgColor, 10%)};
+  --bs-btn-focus-shadow-rgb: 38, 89, 206;
+  --bs-btn-active-color: #{$labelColor};
+  --bs-btn-active-bg: #{mix($colorBlack, $bgColor, 5%)};
+  --bs-btn-active-border-color: #{mix($colorBlack, $bgColor, 10%)};
+  --bs-btn-active-shadow: inset 0 px-em(3px) px-em(5px) rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-bg: #{mix($colorBlack, $bgColor, 20%)};
+  --bs-btn-disabled-border-color: #{mix($colorBlack, $bgColor, 35%)};
+}
+
